--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -111,6 +111,7 @@
           }
           .chart-wrapper-right {
             width: 23%;
+            text-align: left;
             .chart-detail-wrapper {
               background-color: white;
               padding: 25px 26px;
@@ -1005,15 +1006,11 @@ span.edit_my_gear {
   .order-history-table {
     display: none !important;
   }
-
   .dashboard .dashboard-head .nav-tabs .nav-link {
     padding: 10px 15px !important;
   }
   .row {
     width: 100%;
-  }
-  .wrraper_dashboard {
-    background-color: white !important;
   }
   .account-detail-left {
     width: 100% !important;
@@ -1027,7 +1024,6 @@ span.edit_my_gear {
   .card-body {
     border: solid 20px #faf8f9 !important;
   }
-
   .dashboard-head{
     img{
       width: 141px !important;
@@ -1040,7 +1036,6 @@ span.edit_my_gear {
       height: 90px !important;
     }
   }
-
   .react-tabs__tab-list{
     width:111px;
     height:44px;
@@ -1051,7 +1046,6 @@ span.edit_my_gear {
   }
   .table-content-name-body{
     font-size: 16px !important;
-
   }
   .list-p{
     width: 98px;
@@ -1065,10 +1059,8 @@ span.edit_my_gear {
       margin: 0px !important;
     }
   }
-
   .wrraper_dashboard {
     padding: 18px !important;
-
     .col-sm-12 {
       padding: 0;
       background-color: white;
@@ -1082,33 +1074,26 @@ span.edit_my_gear {
         }
       }
     }
-    .listing-temp-right{
+    .listing-temp-right {
       padding: 1px !important;
       height: 140px;
       border-left: 1px solid #f3f3f3 !important;
-      .listing-temp-right-top{
+      .listing-temp-right-top {
         height: 60px;
         padding: 15px 12px !important;
-        .listing-temp-right-top-number{
+        .listing-temp-right-top-number {
           font-size: 14px !important;
           opacity: 50%;
-
         }
       }
-      .listing-temp-right-bottom{
+      .listing-temp-right-bottom {
         border-top: 1px solid #f3f3f3 !important;
         height: 60px;
-
-        //width: 120px;
-
-        .listing-temp-right-bottom-left{
-          //width:50% !important;
+        .listing-temp-right-bottom-left {
           padding-left: 12px;
           width: 120px;
           border-right: 1px solid #f3f3f3 !important;
-
-
-          .listing-temp-right-bottom-left-p{
+          .listing-temp-right-bottom-left-p {
             opacity: 0.5;
             font-size: 12px;
             padding-top: 12px !important;
@@ -1116,11 +1101,10 @@ span.edit_my_gear {
             color: $text-muted;
           }
         }
-        .listing-temp-right-bottom-right{
-          //width: 50% !important;
+        .listing-temp-right-bottom-right {
           padding-left: 12px;
           width: 120px;
-          .listing-temp-right-bottom-right-p{
+          .listing-temp-right-bottom-right-p {
             opacity: 0.5;
             font-size: 12px;
             padding-top: 12px !important;
@@ -1133,21 +1117,18 @@ span.edit_my_gear {
     }
   }
 
-  .wrraper-region{
+  .wrraper-region {
     padding: 0px 18px !important;
   }
-
-  .listing-data-image{
+  .listing-data-image {
     margin: auto !important;
   }
-  .wrraper_dashboard .listing-data-slice tr{
+  .wrraper_dashboard .listing-data-slice tr {
     height: 140px;
     td {
       border-top: 18px solid #f3f3f3 !important;
-      //padding: 25px 12px !important;
     }
   }
-
 }
 
 @media (max-width:550px) {
@@ -1326,6 +1307,7 @@ span.edit_my_gear {
     }
   }
 }
+
 .react-tabs__tab-panel--selected {
   padding:30px;
 }
@@ -1521,7 +1503,6 @@ span.edit_my_gear {
   border:15px solid #faf8f9;
   display: none;
 }
-
 .mylistingitem_sm_parent_div {
   border-top: 17px solid #faf8f9;
   &:last-child {
@@ -1590,6 +1571,73 @@ span.edit_my_gear {
   }
   .order_history_sm_parent_div {
     display: none;
+  }
+}
+
+@media (max-width: 1077px) {
+  .line-chart {
+    margin-bottom: 18px !important;
+    display: grid;
+  }
+  .chart-wrapper-left {
+    width: 100% !important;
+    border: none !important;
+    order: 2;
+  }
+  .chart-wrapper-right {
+    width: 100% !important;
+    display: flex;
+    margin-bottom: 18px !important;
+    .chart-detail-wrapper {
+      width: inherit !important;
+      height: 100% !important;
+      padding: 12px 18px !important;
+      margin-bottom: none !important;
+
+      .total-detail-heading {
+        font-size: 12px !important;
+        line-height: 18px !important;
+        letter-spacing: 0.03em !important;
+        color: #3A3A3A !important;
+        opacity: 0.7 !important;
+      }
+      .total-detail-value {
+        font-size: 16px !important;
+        line-height: 23px !important;
+        letter-spacing: 0.09em !important;
+        text-transform: uppercase !important;
+        color: #252525 !important;
+      }
+      .total-detail-compare-value {
+        display: none;
+      }
+    }
+  }
+  .total-count-wrapper {
+    .col {
+      border-right: solid 18px #faf8f9 !important;
+      &:last-child {
+        border-right: none !important;
+      }
+      & > div {
+        height: 100%;
+        padding: 12px 16px !important;
+        display: grid;
+      }
+      h2 {
+        order: 2;
+        margin-bottom: 11px !important;
+        font-size: 16px !important;
+        line-height: 23px !important;
+        letter-spacing: 0.09em !important;
+      }
+      p {
+        font-size: 12px !important;
+        line-height: 18px !important;
+        letter-spacing: 0.03em !important;
+        margin: 0 !important;
+      }
+    }
   }
 }
 
