--- a/src/scss/pages/dashboard.scss
+++ b/src/scss/pages/dashboard.scss
@@ -198,48 +198,6 @@
           width: 100%;
           margin: 0 !important;
         }
-        .account-detail-left {
-          width: 50%;
-          padding-right: 15px;
-
-          .forgot-pwd-btn {
-            float: right;
-            font-family: Helvetica Neue;
-            font-size: 12px;
-            line-height: 18px;
-            text-align: center;
-            letter-spacing: 0.03em;
-            color: #F74377;
-            border-bottom: 1px solid rgba(247, 67, 119, .2);
-            font-weight: 100;
-          }
-          .card-body:last-child {
-            margin-bottom: 0 !important;
-          }
-        }
-        .account-detail-right {
-          width: 50%;
-          padding-left: 15px;
-          display: flex;
-          justify-content: center;
-
-          .card-body {
-            height: 100%;
-          }
-          .payment-card {
-            padding: 15px;
-            width: 99% !important;
-            background-color: #F7F7F7;
-            border-radius: 4px;
-
-            img {
-              width: 60px;
-            }
-          }
-        }
-        img {
-          width: 100%;
-        }
 
         .card-body {
           border: none;
@@ -1565,6 +1523,10 @@ span.edit_my_gear {
   }
 }
 
+.wrapper-detail {
+  border: solid 30px #faf8f9;
+}
+
 @media (min-width: 1078px) {
   .container {
     min-width: 1000px !important;
@@ -1592,7 +1554,7 @@ span.edit_my_gear {
       width: inherit !important;
       height: 100% !important;
       padding: 12px 18px !important;
-      margin-bottom: none !important;
+      margin-bottom: 0 !important;
 
       .total-detail-heading {
         font-size: 12px !important;
@@ -1645,6 +1607,7 @@ span.edit_my_gear {
   .wrraper_dashboard {
     padding: 0 !important;
     margin-top: 10px;
+    border: solid 10px #faf8f9;
 
     .account-detail-left {
       margin-bottom: 0 !important;
@@ -1674,10 +1637,92 @@ span.edit_my_gear {
       min-height: 150px !important;
       margin: 0 !important;
     }
-
     .listing-data-slice {
       border-left: 17px solid #faf8f9;
       border-right: 17px solid #faf8f9;
+    }
+
+    .line-chart {
+      margin-bottom: 10px !important;
+      display: grid;
+    }
+    .chart-wrapper-left {
+      width: 100% !important;
+      border: none !important;
+      order: 2;
+    }
+    .chart-wrapper-right {
+      width: 100% !important;
+      display: block;
+      margin-bottom: 0 !important;
+      min-height: 300px;
+
+      .chart-detail-wrapper {
+        width: 100% !important;
+        height: auto !important;
+        padding: 12px 18px !important;
+        margin-bottom: 10px !important;
+
+        .total-detail-heading {
+          font-size: 12px !important;
+          line-height: 18px !important;
+          letter-spacing: 0.03em !important;
+          color: #3A3A3A !important;
+          opacity: 0.7 !important;
+        }
+        .total-detail-value {
+          font-size: 16px !important;
+          line-height: 23px !important;
+          letter-spacing: 0.09em !important;
+          text-transform: uppercase !important;
+          color: #252525 !important;
+        }
+        .total-detail-compare-value {
+          display: none;
+        }
+      }
+    }
+    .total-count-wrapper {
+      .col {
+        border-right: solid 10px #faf8f9 !important;
+        &:last-child {
+          border-right: none !important;
+        }
+        & > div {
+          padding: 12px 12px !important;
+        }
+        h2 {
+          font-size: 16px !important;
+          line-height: 23px !important;
+          letter-spacing: 0.09em !important;
+          margin: 0 !important;
+        }
+        p {
+          font-size: 12px !important;
+          line-height: 18px !important;
+          letter-spacing: 0.03em !important;
+          margin-bottom: 11px !important;
+        }
+      }
+    }
+  }
+  .wrapper-detail {
+    border: solid 10px #faf8f9 !important;
+    .card-body {
+      border: none !important;
+      padding: 16px;
+      button {
+        width: 100%;
+      }
+      .forgot-pwd-btn {
+        font-family: Helvetica Neue;
+        font-size: 12px;
+        line-height: 18px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: #F74377;
+        text-decoration: underline;
+      }
     }
   }
 }
