gear pickup confirm modal

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -26,6 +26,7 @@
 @import 'pages/login';
 @import 'pages/register';
 @import 'pages/dashboard';
+@import 'pages/dashboard/order-history';
 @import 'pages/addgear';
 @import 'pages/viewgear';
 @import 'pages/cart';
